--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -14,7 +14,7 @@
         <p class=" menubutton ">Outdoor: </p>
         <a class="buttonlook menubutton"  th:href="@{/venuelist/outdoor/yes}">Yes</a>
         <a class="buttonlook menubutton"  th:href="@{/venuelist/outdoor/no}">No</a>
-        <a class="buttonlook menubutton"  th:href="@{/venuelist}">All</a>
+        <a class="buttonlook menubutton"  th:href="@{/venuelist/outdoor/all}">All</a>
     </div>
 <ul class="page buttonlist">
     <li th:each="venue, iStat:${venues}">
