--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -11,10 +11,16 @@
 <div class="container">
 <h1>Venue list</h1>
     <div class="sublist">
-        <p class=" menubutton ">Outdoor: </p>
+        <p class=" menubutton2 ">Outdoor: </p>
         <a class="buttonlook menubutton" th:classappend=" ${outdoor == 'yes' } ? buttonlookhighlight"  th:href="@{/venuelist/outdoor/yes}">Yes</a>
         <a class="buttonlook menubutton" th:classappend=" ${outdoor == 'no' } ? buttonlookhighlight" th:href="@{/venuelist/outdoor/no}">No</a>
         <a class="buttonlook menubutton" th:classappend=" ${outdoor == 'all' } ? buttonlookhighlight" th:href="@{/venuelist/outdoor/all}">All</a>
+    </div>
+    <div class="sublist2">
+        <p class=" menubutton2 ">Indoor: </p>
+        <a class="buttonlook menubutton" th:classappend=" ${indoor == 'yes' } ? buttonlookhighlight"  th:href="@{/venuelist/indoor/yes}">Yes</a>
+        <a class="buttonlook menubutton" th:classappend=" ${indoor == 'no' } ? buttonlookhighlight" th:href="@{/venuelist/indoor/no}">No</a>
+        <a class="buttonlook menubutton" th:classappend=" ${indoor == 'all' } ? buttonlookhighlight" th:href="@{/venuelist/indoor/all}">All</a>
     </div>
 <ul class="page buttonlist">
     <li th:each="venue, iStat:${venues}">
