--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -33,11 +33,11 @@
         <p class=" menubutton2 ">size: </p>
         <a class="buttonlook menubutton" th:classappend=" ${size == 'all' } ? buttonlookhighlight"
            th:href="@{/venuelist/size/all}">All</a>
-        <a class="buttonlook menubutton" th:classappend=" ${size == 's' } ? buttonlookhighlight"
+        <a class="buttonlook menubutton" th:classappend=" ${size == 'S' } ? buttonlookhighlight"
            th:href="@{/venuelist/size/S}">S</a>
-        <a class="buttonlook menubutton" th:classappend=" ${size == 'm' } ? buttonlookhighlight"
+        <a class="buttonlook menubutton" th:classappend=" ${size == 'M' } ? buttonlookhighlight"
            th:href="@{/venuelist/size/M}">M</a>
-        <a class="buttonlook menubutton" th:classappend=" ${size == 'l' } ? buttonlookhighlight"
+        <a class="buttonlook menubutton" th:classappend=" ${size == 'L' } ? buttonlookhighlight"
            th:href="@{/venuelist/size/L}">L</a>
 
     </div>
