--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -7,10 +7,30 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header">header</div>
-
-<div class="container">
-    <h1 th:if="${venuename}" th:text="${venuename}">venuename</h1>
-    <p th:unless="${venuename}">No venue is chosen</p>
-    <p>Welcome to the Venue Page.</p>
+<div th:if="${venue}">
+    <div class="border"><a th:href="@{|/venuedetails/${prevIndex}|}" href="#" class="nextprev">&lt;</a></div>
+    <div class="container"><h1 th:text="${venue.getVenueName()}">venueTitle</h1></div>
+    <div class="linkercontainer">
+        <p>info:</p>
+        <p>capacity:</p>
+        <p>food provided:</p>
+        <p>indoor:</p>
+        <p>outdoor:</p>
+        <p>free parking:</p>
+        <p>city:</p>
+        <p>distance from public transport:</p></div>
+    <div class="rechtercontainer">
+        <p th:text="${venue.getLinkMoreInfo()}"> Get more info</p>
+        <p th:text="${venue.getCapacity()}">Capacity</p>
+        <p th:text="${venue.isFoodProvided()}">Is food provided</p>
+        <p th:text="${venue.isIndoor()}">Is indoor</p>
+        <p th:text="${venue.isOutdoor()}">Is outdoor</p>
+        <p th:text="${venue.isFreeParkingAvailable()}">Is free parking available</p>
+        <p th:text="${venue.getCity()}">City</p>
+        <p th:text="${venue.getDistanceFromPublicTransportInKm()}">Distance from public transport in km</p></div>
+    <div class="border"><a th:href="@{|/venuedetails/${nextIndex}|}" href="#" class="nextprev">&gt;</a></div>
 </div>
+<h1 th:if="${idNull}"> No valid venue is chosen</h1>
+
+</body>
 </html>
