--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -86,12 +86,14 @@ p{
     color: white;
     display: block;
     width: 800px;
-    height: 50px;
-    line-height: 50px;
     font-size: 18px;
     text-align: center;
     text-decoration: none;
     margin-bottom: 15px;
+}
+
+.buttonlistunderscript{
+    font-size: 13px;
 }
 
 .nextprev{
