--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -9,12 +9,13 @@
 <div th:replace="fragments/header :: header">header</div>
 
 <div class="container">
-    <h1>Venue list</h1>
+    <h1>Venues</h1>
+    <h1 th:text="|${aantal} venues found|" > No venues found </h1>
     <a h1 class="buttonlook" th:if="${showFilters}">-</a>
     <div th:if="${showFilters}" ><h1>Hier komen de filters!! </h1></div>
     <a class="buttonlook" th:unless="${showFilters}" href="/venuelist/filter">Filter</a>
     <ul class="buttonlist">
-        <li th:each="venue, iStat:${venues}"><a th:href="@{|/venuedetails/*{venue.getId()}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a></li>
+        <li th:each="venue, iStat:${venues}"><a th:href="@{|/venuedetails/*{venue.getId()}|}"  href=""><span th:text="|${venue.getVenueName()}|">venue name</span><br><span class="buttonlistunderscript" th:text="|Capacity ${venue.getCapacity}|"></span></a>
     </ul>
     </ul>
 </div>
