--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -10,12 +10,26 @@
 
 <div class="container">
     <h1>Venues</h1>
-    <h1 th:text="|${aantal} venues found|" > No venues found </h1>
-    <a h1 class="buttonlook" th:if="${showFilters}">-</a>
-    <div th:if="${showFilters}" ><h1>Hier komen de filters!! </h1></div>
+    <h1 th:text="|${aantal} venues found|"> No venues found </h1>
+    <a h1 class="buttonlook" th:if="${showFilters}" th:href="@{/venuelist}">-</a>
+    <form></form>
+    <div th:if="${showFilters}"><h1>Hier komen de filters!! </h1>
+        <form>
+            <div>
+                <input type="submit" value="search">
+            </div>
+            <h3>capacity</h3>
+            <div>
+                <label for="minCapacity"l>min</label>
+                <input type="number" id="minCapacity" name="minCapacity" value="0" step="50"  >persons</input>
+            </div>
+        </form>
+    </div>
     <a class="buttonlook" th:unless="${showFilters}" href="/venuelist/filter">Filter</a>
     <ul class="buttonlist">
-        <li th:each="venue, iStat:${venues}"><a th:href="@{|/venuedetails/*{venue.getId()}|}"  href=""><span th:text="|${venue.getVenueName()}|">venue name</span><br><span class="buttonlistunderscript" th:text="|Capacity ${venue.getCapacity}|"></span></a>
+        <li th:each="venue, iStat:${venues}"><a th:href="@{|/venuedetails/*{venue.getId()}|}" href=""><span
+                th:text="|${venue.getVenueName()}|">venue name</span><br><span class="buttonlistunderscript"
+                                                                               th:text="|Capacity ${venue.getCapacity}|"></span></a>
     </ul>
     </ul>
 </div>
