--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -23,6 +23,10 @@
                 <label for="minCapacity"l>min</label>
                 <input type="number" id="minCapacity" name="minCapacity" value="0" step="50"  >persons</input>
             </div>
+            <div>
+                <label for="maxCapacity"l>max</label>
+                <input type="number" id="maxCapacity" name="maxCapacity" value="0" step="50"  >persons</input>
+            </div>
         </form>
     </div>
     <a class="buttonlook" th:unless="${showFilters}" href="/venuelist/filter">Filter</a>
