--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,7 @@
             <a class="buttonlook menubutton" th:href="@{/about}">About</a>
             <a class="buttonlook menubutton" th:href="@{/venuelist}">Venuelist</a>
             <a class="buttonlook menubutton" th:href="@{/artistlist}">Artistlist</a>
+            <a class="buttonLook menuButton" th:href="@{/partylist}">parties</a>
         </div>
     </div>
 
