--- a/src/main/resources/templates/partylist.html
+++ b/src/main/resources/templates/partylist.html
@@ -1,28 +1,20 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Venue list</title>
-  <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <meta charset="UTF-8">
+    <title>About page</title>
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header">header</div>
+
 <div class="container">
-  <h1>Artist list</h1>
-  <div th:if="${showFilters}"><h1>Hier komen de filters!! </h1>
-    <form>
-      <div><input type="submit" value="search"></div>
-      <h3>Artist Name</h3>
-      <div><label for="artistName" l>Artist name</label> <input type="text" id="artistName" name="artistName"
-                                                                value=""></input></div>
-    </form>
-  </div>
-  <a class="buttonlook" th:unless="${showFilters}" href="/artistlist/filter">Filter</a>
-  <ul class="buttonlist">
-    <li th:each="artist, iStat:${artists}"><a th:href="@{|/artistdetailsbyid/*{iStat.index +1}|}"
-                                              th:text="|${artist.getArtistName()}|" href="">artist name</a></li>
-  </ul>
+    <h1>About</h1>
+    <div th:each="party:${parties}">
+        <a class="buttonLook mediumButton" th:href="@{|/partydetails/${party.id}|}">
+            <span th:text="${party.name}">venue name </span>
+        </a>
+    </div>
 </div>
 </body>
 </html>
