--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,6 +47,13 @@ p{
     float: left;
 }
 
+.containerbelow{
+    width:88%;
+    margin-left:auto;
+    margin-right: auto;
+    float: right;
+}
+
 .buttonlook:hover{
     background-color: deeppink;
 }
@@ -133,6 +140,8 @@ p{
     float:left;
     width:50%;
 }
+
+
 
 .sublist{
     height: 45px;
