--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -9,7 +9,11 @@
 <div th:replace="fragments/header :: header">header</div>
 <div th:if="${venue}">
     <div class="border"><a th:href="@{|/venuedetails/${prevIndex}|}" href="#" class="nextprev">&lt;</a></div>
-    <div class="container"><h1 th:text="${venue.getVenueName()}">venueTitle</h1></div>
+    <div class="container">
+        <h1 th:text="${venue.getVenueName()}">venueTitle</h1>
+        <h1 th:text="|Venuename: ${venue.getVenueName()}|">venueDetails</h1>
+
+    </div>
     <div class="linkercontainer">
         <p>info:</p>
         <p>capacity:</p>
@@ -29,6 +33,19 @@
         <p th:text="${venue.getCity()}">City</p>
         <p th:text="${venue.getDistanceFromPublicTransportInKm()}">Distance from public transport in km</p></div>
     <div class="border"><a th:href="@{|/venuedetails/${nextIndex}|}" href="#" class="nextprev">&gt;</a></div>
+</div>
+<div class="container">
+    <div class="containerbelow">
+        <h1 class="container"  th:text="|Parties in ${venue.venueName}|">parties in this venue</h1>
+
+        <div class="venuelist">
+            <div th:each="party:${parties}">
+                <a class="container" th:href="@{|/partydetails/${party.id}|}">
+                    <span th:text="${party.name}">venue name </span>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 <h1 th:if="${idNull}"> No valid venue is chosen</h1>
 
