--- a/src/main/resources/templates/partydetails.html
+++ b/src/main/resources/templates/partydetails.html
@@ -7,56 +7,49 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header">header</div>
-
+<div class="border"><a th:href="@{|/partydetails/${party.id}/prev|}" href="#" class="nextprev">&lt;</a></div>
 
 <div class="row1">
     <div class="row1content" th:if="${party}">
 
-        <div>
-            <a th:href="@{|/partydetails/${party.id}/prev|}">&lt;</a>
-        </div>
-        <div>
-            <a th:href="@{|/partydetails/${party.id}/next|}">&gt;</a>
-        </div>
+        <h1 th:text="${party.name}">partydetails</h1>
 
-        <h2 th:text="${party.name}">partydetails</h2>
-
-        <h3>
+        <h1>
             <span th:text="${party.date}">date</span>
             in
             <a th:href="@{|/venuedetails/${party.venue.id}|}" th:text="${party.venue.venueName}">venue</a>
-        </h3>
+        </h1>
+        <div class="linkercontainer">
+            <p>price:</p>
+            <p>where:</p>
+            <p>doors:</p>
+            <p>extraInfo</p></div>
 
-        <div>
-            <div th:unless="${party.pricePresaleInEur!=null || party.priceInEur!=null}">
-                Free Party!
-            </div>
-            <div>
-                <div>where:</div>
-                <div th:text="|${party.venue.city} (${party.venue.distanceFromPublicTransportInKm} km from public transport)|"> city and distance
-                </div>
-            </div>
-            <div th:if="${party.pricePresaleInEur!=null || party.priceInEur!=null}">
-                <div>price:</div>
-
-                <div
-                    th:text="|${party.pricePresaleInEur}&euro; (presale) / ${party.priceInEur}&euro;|">
-                    pricePresaleInEur and price
-                </div>
-            </div>
-            <div >
-                <div>doors</div>
-                <div th:text="${party.doors}">date</div>
-            </div>
-            <div th:if="${!party.extraInfo.isBlank()}">
-                <div>extraInfo</div>
-                <div th:text="${party.extraInfo}">extraInfo</div>
-            </div>
+        <div class="rechtercontainer">
+            <p th:unless="${party.pricePresaleInEur!=null || party.priceInEur!=null}"> Free Party!</p>
+            <p th:unless="|${party.pricePresaleInEur}&euro; (presale) / ${party.priceInEur}&euro;|"> pricePresaleInEur
+                and price</p>
+            <p th:text="|${party.venue.city} (${party.venue.distanceFromPublicTransportInKm} km from public transport)|">
+                city and distance</p>
+            <p th:text="${party.doors}">date</p>
+            <p th:unless="${!party.extraInfo.isBlank()}"> No extra info available</p>
+            <p th:text="${party.extraInfo}">extraInfo</p>
         </div>
-
+        <div class="border"><a th:href="@{|/partydetails/${party.id}/next|}" href="#" class="nextprev">&gt;</a>
+        </div>
     </div>
-    <div th:unless="${party}">
-        <p>no party was chosen</p>
+    <div class="container">
+        <div class="containerbelow">
+            <h1 class="container">line up:</h1>
+            <ul class="buttonlist">
+                <li th:each="artist:${party.artists}">
+                    <a class="container" th:href="@{|/artistdetailsbyid/${artist.id}|}">
+                        <span th:text="${artist.getArtistName()}">artist name </span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
+</body>
 </html>
