--- a/src/main/resources/templates/artistdetailsbyid.html
+++ b/src/main/resources/templates/artistdetailsbyid.html
@@ -23,5 +23,19 @@
 <p th:unless="${artist}">No valid artist is chosen</p>
 <div th:if="${artist}" class="border"><a class="nextprev" href="#" th:href="@{|/artistdetailsbyid/${nextId}|}">&gt;</a>
 </div>
+</div>
+<div class="container">
+    <div class="containerbelow">
+        <h1 class="container"th:text="|Parties by ${artist.artistName}|">parties by artist</h1>
+        <ul class="buttonlist">
+            <li th:each="party:${artist.parties}">
+                <a class="container" th:href="@{|/partydetails/${party.id}|}">
+                    <span th:text="${party.name}">venue name</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+</div>
 </body>
 </html>
