--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,10 +10,10 @@
 <div th:replace="fragments/header :: header">header</div>
 
 <div class="container">
-<h1>Homepage</h1>
-<p>Welcome to the party.</p>
-<p th:text="${mySpecialNumber}">blabla</p>
-</div>>
-
+    <h1>Overview of upcomming party's will be displayed soon - Website still under construction! </h1>
+    <BR>
+    <img class="imagehomepage" src="https://t4.ftcdn.net/jpg/01/16/65/29/360_F_116652906_y9YDrMad6vbHsUkFw9fjVG4uVeFNXcuM.jpg">
+    <h1>Even if the website is still under construction; Every button you'll click works and our data is up-to-date!! </h1>
+</div>
 </body>
 </html>
