--- a/src/main/resources/templates/partydetails.html
+++ b/src/main/resources/templates/partydetails.html
@@ -65,5 +65,16 @@
     </div>
 </div>
 </div>
+<div class="container">
+    <div class="containerbelow">
+        <h1 class="container">Edit party:</h1>
+        <ul class="buttonlist">
+            <li>
+                <a class="container" th:href="@{|/admin/partyedit/${party.id}|}">EDIT
+                </a>
+            </li>
+        </ul>
+    </div>
+    </div>
 </body>
 </html>
