--- a/src/main/resources/templates/partydetails.html
+++ b/src/main/resources/templates/partydetails.html
@@ -7,74 +7,88 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header">header</div>
-<div class="border"><a th:href="@{|/partydetails/${party.id}/prev|}" href="#" class="nextprev">&lt;</a></div>
 
 <div class="row1">
-    <div class="row1content" th:if="${party}">
+    <div class="row1content" th:if="${party}" th:object="${party}">
 
-        <h1 th:text="${party.name}">partydetails</h1>
+        <div class="prevButtonDiv">
+            <a class="buttonLook smallButton" th:href="@{|/partydetails/${prevId}|}">&lt;</a>
+        </div>
+        <div class="nextButtonDiv">
+            <a class="buttonLook smallButton" th:href="@{|/partydetails/${nextId}|}">&gt;</a>
+        </div>
+        <div class="editButtonDiv">
+            <a th:href="@{|/admin/partyedit/*{id}|}" class="buttonLook smallButton">edit</a>
+        </div>
 
-        <h1>
-            <span th:text="${party.date}">date</span>
+
+        <h2 th:text="*{name}">partydetails</h2>
+
+        <h3>
+            <span th:text="*{#dates.format(date, 'dd/MM/yyyy')}">date</span>
             in
-            <a th:href="@{|/venuedetails/${party.venue.id}|}" th:text="${party.venue.venueName}">venue</a>
-        </h1>
-        <div class="linkercontainer">
-            <p>price:</p>
-            <p>where:</p>
-            <p>doors:</p>
-            <p>extraInfo</p></div>
+            <a th:href="@{|/venuedetails/*{venue.id}|}" th:text="*{venue.venueName}" class="linkLook">venue</a>
+        </h3>
 
-        <div class="rechtercontainer">
-            <p th:unless="${party.pricePresaleInEur!=null || party.priceInEur!=null}"> Free Party!</p>
-            <p th:unless="|${party.pricePresaleInEur}&euro; (presale) / ${party.priceInEur}&euro;|"> pricePresaleInEur
-                and price</p>
-            <p th:text="|${party.venue.city} (${party.venue.distanceFromPublicTransportInKm} km from public transport)|">
-                city and distance</p>
-            <p th:text="${party.doors}">date</p>
-            <p th:unless="${!party.extraInfo.isBlank()}"> No extra info available</p>
-            <p th:text="${party.extraInfo}">extraInfo</p>
+        <div class="venueinfo">
+            <div class="infoLine" th:unless="*{pricePresaleInEur!=null || priceInEur!=null}">
+                Free Party!
+            </div>
+            <div class="infoLine">
+                <div class="infoLineName">where:</div>
+                <div class="infoLineValue"
+                     th:text="|*{venue.city} (*{venue.distanceFromPublicTransportInKm} km from public transport)|">
+                    city and distance
+                </div>
+            </div>
+            <div class="infoLine" th:if="*{pricePresaleInEur!=null || priceInEur!=null}">
+                <div class="infoLineName">price:</div>
+                <!--suppress SyntaxError -->
+                <div class="infoLineValue"
+                     th:text="|*{pricePresaleInEur}${'&euro;'} (presale) / *{priceInEur}${'&euro;'}|">
+                    pricePresaleInEur and price
+                </div>
+            </div>
+            <div class="infoLine">
+                <div class="infoLineName">doors</div>
+                <div class="infoLineValue" th:text="*{#dates.format(doors, 'HH:mm')}">doors</div>
+            </div>
+            <div class="infoLine" th:if="*{!extraInfo.isBlank()}">
+                <div class="infoLineName">extra info</div>
+                <div class="infoLineValue" th:text="*{extraInfo}">extraInfo</div>
+            </div>
         </div>
-        <div class="border"><a th:href="@{|/partydetails/${party.id}/next|}" href="#" class="nextprev">&gt;</a>
-        </div>
+
     </div>
-<div class="container">
-    <div class="containerbelow">
-        <h1 class="container">line up:</h1>
-        <ul class="buttonlist">
-            <li th:each="artist:${party.artists}">
-                <a class="container" th:href="@{|/artistdetailsbyid/${artist.id}|}">
-                    <span th:text="${artist.getArtistName()}">artist name </span>
+    <div class="row1content" th:unless="${party}">
+        <p>no party was chosen</p>
+    </div>
+</div>
+<div class="row1" th:if="${party}">
+    <div class="row1content">
+        <h2>line up: </h2>
+
+        <div class="venuelist">
+            <div th:each="artist:${party.artists}">
+                <a class="buttonLook mediumButton" th:href="@{|/artistdetails/${artist.id}|}">
+                    <span th:text="${artist.artistName}">artist name </span>
                 </a>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
 </div>
-</div>
-</div>
-<div class="container">
-    <div class="containerbelow">
-        <h1 class="container">who goes?</h1>
-        <ul class="buttonlist">
-            <li th:each="animal:${party.animals}">
-                <a class="container" th:href="@{|/animaldetails/${animal.id}|}">
+<div class="row1" th:if="${party}">
+    <div class="row1content">
+        <h2>who goes? </h2>
+
+        <div class="venuelist">
+            <div th:each="animal:${party.animals}">
+                <a class="buttonLook mediumButton" th:href="@{|/animaldetails/${animal.id}|}">
                     <span th:text="${animal.name}">animal name </span>
                 </a>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
 </div>
-</div>
-<div class="container">
-    <div class="containerbelow">
-        <h1 class="container">Edit party:</h1>
-        <ul class="buttonlist">
-            <li>
-                <a class="container" th:href="@{|/admin/partyedit/${party.id}|}">EDIT
-                </a>
-            </li>
-        </ul>
-    </div>
-    </div>
 </body>
 </html>
